src/test/deca/context/invalid/DupVarDecl2.deca
//Test contextuellement invalide : double declaration de la meme variable

//Resultat : Erreur ligne 8

{
    int a;
    
    int a;
}
